# weather-widget

./: CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  airports.sqlite3  includes.hpp  main.cpp  tools.cpp  ui.cpp  update.cpp  widget.cpp  widget.h  widget.hpp
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
tools/: airports.csv  update.bat
